<resources>
    <string name="app_name">DvachMovie</string>
    <string name="preview_image">Preview image</string>
    <string name="exit_image">Image for exit from app</string>
    <string name="download">Download</string>
    <string name="shuffle">Shuffle</string>
    <string name="clean_movies">Clean movies</string>
    <string name="prepare_each_times">Prepare each times</string>
    <string name="change_to_default_board">Change to default board</string>
    <string name="retry">Retry</string>
    <string name="loading_image">Loading image</string>
    <string name="set_adult_board">Set adult board</string>
    <string name="set_adult_otherboard">Set adult otherboard</string>
    <string name="set_japan_board">Set japan board</string>
    <string name="set_games_board">Set games board</string>
    <string name="set_tech_and_soft_board">Set tech and soft board</string>
    <string name="set_politics_and_news_board">Set politics and news board</string>
    <string name="set_creation_board">Set creation board</string>
    <string name="set_theme_board">Set theme board</string>
    <string name="set_popular_board">Set popular board</string>
    <string name="get_pro_version">Get pro version</string>
    <string name="allow_unmoderated_content">Allow unmoderated content</string>
    <string name="unmoderated_content_warning">By unlocking unmoderated boards, you agree that you are over 18 years old. The developer is not responsible for the content provided by users - these are only links to the boards received from 2ch.hk.</string>
    <string name="settings_button">Settings</string>
    <string name="copy_url_button">Copy url</string>
    <string name="list_videos">List videos</string>
    <string name="gesture">Gesture</string>
    <string name="report">Report</string>
    <string name="promote">Promote</string>
    <string name="list_button_visible">List button visible</string>
    <string name="report_button_visible">Report button visible</string>
    <string name="set_proxy">Set proxy</string>
    <string name="_127_0_0_1_8080">127.0.0.1:8080</string>
    <string name="proxy">Proxy</string>
    <string name="start">Start</string>
    <string name="refresh_movies">Refresh movies</string>
</resources>
